Fix issue with header logo beign too large

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -31,7 +31,6 @@ header {
   font-weight: bold;
   font-style: italic;
   float: none;
-  margin-right: 5rem;
 }
 
 .header__logo h1,
